// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListDesignerPanel existing list 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="domain-designer"
      >
        <div
          class="panel panel-default domain-form-panel lk-border-theme-light"
        >
          <div
            class="domain-panel-header domain-heading-collapsible domain-panel-header-expanded labkey-page-nav"
            id="list-properties-hdr"
          >
            <span
              class="domain-panel-status-icon"
            >
              <span
                class="fa fa-check-circle"
              />
            </span>
            <span
              class="domain-panel-title"
            >
              NIMHDemographics - List Properties
            </span>
            <span
              class="pull-right"
            >
              <span
                class="fa fa-lg fa-chevron-down domain-form-collapse-btn"
              />
            </span>
          </div>
          <div
            class="collapse panel-collapse in"
          >
            <div
              class="panel-body"
            >
              <div
                class="row margin-bottom"
              >
                <div
                  class="col-xs-12"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-xs-12"
                    >
                      <a
                        class="domain-field-float-right"
                        href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createListOptions"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        Learn more about designing lists
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <form>
                <div
                  class="col-xs-12 col-md-7"
                >
                  <div
                    class="domain-field-section-heading"
                  >
                    Basic Properties
                  </div>
                  <div
                    class="row margin-top"
                  >
                    <div
                      class="col-xs-3 col-lg-2"
                    >
                      <span
                        class="domain-no-wrap"
                      >
                        Name
                        <div
                          class="overlay-trigger"
                        >
                          <span
                            class="label-help-target"
                          >
                            <span
                              class="label-help-icon fa fa-question-circle"
                            />
                          </span>
                        </div>
                         *
                      </span>
                    </div>
                    <div
                      class="col-xs-9 col-lg-8"
                    >
                      <input
                        class="form-control"
                        id="name"
                        placeholder="Enter a name for this list"
                        type="text"
                        value="NIMHDemographics"
                      />
                    </div>
                  </div>
                  <div
                    class="row margin-top"
                  >
                    <div
                      class="col-xs-3 col-lg-2"
                    >
                      <span
                        class="domain-no-wrap"
                      >
                        Description
                        
                      </span>
                    </div>
                    <div
                      class="col-xs-9 col-lg-8"
                    >
                      <textarea
                        class="form-control"
                        id="description"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="col-xs-12 col-md-3"
                >
                  <div
                    class="domain-field-section-heading"
                  >
                    Allow these Actions
                  </div>
                  <div
                    class="list__properties__allowable-actions"
                  >
                    <div
                      class="list__properties__checkbox-row"
                    >
                      <div
                        class="form-group"
                      >
                        <label>
                          <input
                            checked=""
                            type="checkbox"
                          />
                          Delete
                        </label>
                      </div>
                    </div>
                    <div
                      class="list__properties__checkbox-row"
                    >
                      <div
                        class="form-group"
                      >
                        <label>
                          <input
                            checked=""
                            type="checkbox"
                          />
                          Upload
                        </label>
                      </div>
                    </div>
                    <div
                      class="list__properties__checkbox-row"
                    >
                      <div
                        class="form-group"
                      >
                        <label>
                          <input
                            checked=""
                            type="checkbox"
                          />
                          Export & Print
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="domain-field-float-right btn btn-default"
                  type="button"
                >
                  Advanced Settings
                </button>
              </form>
            </div>
          </div>
        </div>
        <div
          class="panel panel-default domain-form-panel"
        >
          <div
            class="domain-panel-header domain-heading-collapsible domain-panel-header-collapsed"
            id="domainpropertiesrow-NIMHDemographics-hdr"
          >
            <span
              class="domain-panel-status-icon domain-panel-status-icon-green"
            >
              <span
                class="fa fa-check-circle"
              />
            </span>
            <span
              class="domain-panel-title"
            >
              Fields
            </span>
            <span
              class="pull-right"
            >
              <span
                class="fa fa-lg fa-chevron-right domain-form-expand-btn"
              />
            </span>
            <span
              class="domain-panel-header-fields-defined"
            >
              13 Fields Defined
            </span>
          </div>
          <div
            class="collapse panel-collapse"
          >
            <div
              class="panel-body domain-field-top-noBuffer"
            >
              <span
                class=""
              >
                <i
                  aria-hidden="true"
                  class="fa fa-spinner fa-pulse"
                />
                 
                Loading...
              </span>
            </div>
          </div>
        </div>
        <div
          class="form-buttons"
        >
          <div
            class="form-buttons__left"
          >
            <button
              class="cancel-button btn btn-default"
              type="button"
            >
              Cancel
            </button>
          </div>
          <div
            class="form-buttons__right"
          >
            <button
              class="save-button btn btn-primary"
              type="button"
            >
              Save
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      id="overlay-trigger-portal-label-help-tip7"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <div
      class="domain-designer"
    >
      <div
        class="panel panel-default domain-form-panel lk-border-theme-light"
      >
        <div
          class="domain-panel-header domain-heading-collapsible domain-panel-header-expanded labkey-page-nav"
          id="list-properties-hdr"
        >
          <span
            class="domain-panel-status-icon"
          >
            <span
              class="fa fa-check-circle"
            />
          </span>
          <span
            class="domain-panel-title"
          >
            NIMHDemographics - List Properties
          </span>
          <span
            class="pull-right"
          >
            <span
              class="fa fa-lg fa-chevron-down domain-form-collapse-btn"
            />
          </span>
        </div>
        <div
          class="collapse panel-collapse in"
        >
          <div
            class="panel-body"
          >
            <div
              class="row margin-bottom"
            >
              <div
                class="col-xs-12"
              >
                <div
                  class="row"
                >
                  <div
                    class="col-xs-12"
                  >
                    <a
                      class="domain-field-float-right"
                      href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createListOptions"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Learn more about designing lists
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <form>
              <div
                class="col-xs-12 col-md-7"
              >
                <div
                  class="domain-field-section-heading"
                >
                  Basic Properties
                </div>
                <div
                  class="row margin-top"
                >
                  <div
                    class="col-xs-3 col-lg-2"
                  >
                    <span
                      class="domain-no-wrap"
                    >
                      Name
                      <div
                        class="overlay-trigger"
                      >
                        <span
                          class="label-help-target"
                        >
                          <span
                            class="label-help-icon fa fa-question-circle"
                          />
                        </span>
                      </div>
                       *
                    </span>
                  </div>
                  <div
                    class="col-xs-9 col-lg-8"
                  >
                    <input
                      class="form-control"
                      id="name"
                      placeholder="Enter a name for this list"
                      type="text"
                      value="NIMHDemographics"
                    />
                  </div>
                </div>
                <div
                  class="row margin-top"
                >
                  <div
                    class="col-xs-3 col-lg-2"
                  >
                    <span
                      class="domain-no-wrap"
                    >
                      Description
                      
                    </span>
                  </div>
                  <div
                    class="col-xs-9 col-lg-8"
                  >
                    <textarea
                      class="form-control"
                      id="description"
                    />
                  </div>
                </div>
              </div>
              <div
                class="col-xs-12 col-md-3"
              >
                <div
                  class="domain-field-section-heading"
                >
                  Allow these Actions
                </div>
                <div
                  class="list__properties__allowable-actions"
                >
                  <div
                    class="list__properties__checkbox-row"
                  >
                    <div
                      class="form-group"
                    >
                      <label>
                        <input
                          checked=""
                          type="checkbox"
                        />
                        Delete
                      </label>
                    </div>
                  </div>
                  <div
                    class="list__properties__checkbox-row"
                  >
                    <div
                      class="form-group"
                    >
                      <label>
                        <input
                          checked=""
                          type="checkbox"
                        />
                        Upload
                      </label>
                    </div>
                  </div>
                  <div
                    class="list__properties__checkbox-row"
                  >
                    <div
                      class="form-group"
                    >
                      <label>
                        <input
                          checked=""
                          type="checkbox"
                        />
                        Export & Print
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="domain-field-float-right btn btn-default"
                type="button"
              >
                Advanced Settings
              </button>
            </form>
          </div>
        </div>
      </div>
      <div
        class="panel panel-default domain-form-panel"
      >
        <div
          class="domain-panel-header domain-heading-collapsible domain-panel-header-collapsed"
          id="domainpropertiesrow-NIMHDemographics-hdr"
        >
          <span
            class="domain-panel-status-icon domain-panel-status-icon-green"
          >
            <span
              class="fa fa-check-circle"
            />
          </span>
          <span
            class="domain-panel-title"
          >
            Fields
          </span>
          <span
            class="pull-right"
          >
            <span
              class="fa fa-lg fa-chevron-right domain-form-expand-btn"
            />
          </span>
          <span
            class="domain-panel-header-fields-defined"
          >
            13 Fields Defined
          </span>
        </div>
        <div
          class="collapse panel-collapse"
        >
          <div
            class="panel-body domain-field-top-noBuffer"
          >
            <span
              class=""
            >
              <i
                aria-hidden="true"
                class="fa fa-spinner fa-pulse"
              />
               
              Loading...
            </span>
          </div>
        </div>
      </div>
      <div
        class="form-buttons"
      >
        <div
          class="form-buttons__left"
        >
          <button
            class="cancel-button btn btn-default"
            type="button"
          >
            Cancel
          </button>
        </div>
        <div
          class="form-buttons__right"
        >
          <button
            class="save-button btn btn-primary"
            type="button"
          >
            Save
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ListDesignerPanel new list 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="domain-designer"
      >
        <div
          class="panel panel-default domain-form-panel lk-border-theme-light"
        >
          <div
            class="domain-panel-header domain-heading-collapsible domain-panel-header-expanded labkey-page-nav"
            id="list-properties-hdr"
          >
            <span
              class="domain-panel-title"
            >
              List Properties
            </span>
            <span
              class="pull-right"
            >
              <span
                class="fa fa-lg fa-chevron-down domain-form-collapse-btn"
              />
            </span>
          </div>
          <div
            class="collapse panel-collapse in"
          >
            <div
              class="panel-body"
            >
              <div
                class="row margin-bottom"
              >
                <div
                  class="col-xs-12"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-xs-12"
                    >
                      <a
                        class="domain-field-float-right"
                        href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createListOptions"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        Learn more about designing lists
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <form>
                <div
                  class="col-xs-12 col-md-7"
                >
                  <div
                    class="domain-field-section-heading"
                  >
                    Basic Properties
                  </div>
                  <div
                    class="row margin-top"
                  >
                    <div
                      class="col-xs-3 col-lg-2"
                    >
                      <span
                        class="domain-no-wrap"
                      >
                        Name
                        <div
                          class="overlay-trigger"
                        >
                          <span
                            class="label-help-target"
                          >
                            <span
                              class="label-help-icon fa fa-question-circle"
                            />
                          </span>
                        </div>
                         *
                      </span>
                    </div>
                    <div
                      class="col-xs-9 col-lg-8"
                    >
                      <input
                        class="form-control"
                        id="name"
                        placeholder="Enter a name for this list"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="row margin-top"
                  >
                    <div
                      class="col-xs-3 col-lg-2"
                    >
                      <span
                        class="domain-no-wrap"
                      >
                        Description
                        
                      </span>
                    </div>
                    <div
                      class="col-xs-9 col-lg-8"
                    >
                      <textarea
                        class="form-control"
                        id="description"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="col-xs-12 col-md-3"
                >
                  <div
                    class="domain-field-section-heading"
                  >
                    Allow these Actions
                  </div>
                  <div
                    class="list__properties__allowable-actions"
                  >
                    <div
                      class="list__properties__checkbox-row"
                    >
                      <div
                        class="form-group"
                      >
                        <label>
                          <input
                            checked=""
                            type="checkbox"
                          />
                          Delete
                        </label>
                      </div>
                    </div>
                    <div
                      class="list__properties__checkbox-row"
                    >
                      <div
                        class="form-group"
                      >
                        <label>
                          <input
                            checked=""
                            type="checkbox"
                          />
                          Upload
                        </label>
                      </div>
                    </div>
                    <div
                      class="list__properties__checkbox-row"
                    >
                      <div
                        class="form-group"
                      >
                        <label>
                          <input
                            checked=""
                            type="checkbox"
                          />
                          Export & Print
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="domain-field-float-right btn btn-default"
                  type="button"
                >
                  Advanced Settings
                </button>
              </form>
            </div>
          </div>
        </div>
        <div
          class="panel panel-default domain-form-panel"
        >
          <div
            class="domain-panel-header domain-heading-collapsible domain-panel-header-collapsed"
            id="domain-header"
          >
            <div
              class="overlay-trigger"
            >
              <span
                class="label-help-target"
              >
                <span
                  class="domain-panel-status-icon domain-panel-status-icon-blue"
                >
                  <span
                    class="fa fa-exclamation-circle"
                  />
                </span>
              </span>
            </div>
            <span
              class="domain-panel-title"
            >
              Fields
            </span>
            <span
              class="pull-right"
            >
              <span
                class="fa fa-lg fa-chevron-right domain-form-expand-btn"
              />
            </span>
          </div>
          <div
            class="collapse panel-collapse"
          >
            <div
              class="panel-body"
            >
              <span
                class=""
              >
                <i
                  aria-hidden="true"
                  class="fa fa-spinner fa-pulse"
                />
                 
                Loading...
              </span>
            </div>
          </div>
        </div>
        <div
          class="form-buttons"
        >
          <div
            class="form-buttons__left"
          >
            <button
              class="cancel-button btn btn-default"
              type="button"
            >
              Cancel
            </button>
          </div>
          <div
            class="form-buttons__right"
          >
            <button
              class="save-button btn btn-primary"
              type="button"
            >
              Save
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      id="overlay-trigger-portal-label-help-tip5"
    >
      <div />
    </div>
    <div
      id="overlay-trigger-portal-label-help-tip6"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <div
      class="domain-designer"
    >
      <div
        class="panel panel-default domain-form-panel lk-border-theme-light"
      >
        <div
          class="domain-panel-header domain-heading-collapsible domain-panel-header-expanded labkey-page-nav"
          id="list-properties-hdr"
        >
          <span
            class="domain-panel-title"
          >
            List Properties
          </span>
          <span
            class="pull-right"
          >
            <span
              class="fa fa-lg fa-chevron-down domain-form-collapse-btn"
            />
          </span>
        </div>
        <div
          class="collapse panel-collapse in"
        >
          <div
            class="panel-body"
          >
            <div
              class="row margin-bottom"
            >
              <div
                class="col-xs-12"
              >
                <div
                  class="row"
                >
                  <div
                    class="col-xs-12"
                  >
                    <a
                      class="domain-field-float-right"
                      href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createListOptions"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Learn more about designing lists
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <form>
              <div
                class="col-xs-12 col-md-7"
              >
                <div
                  class="domain-field-section-heading"
                >
                  Basic Properties
                </div>
                <div
                  class="row margin-top"
                >
                  <div
                    class="col-xs-3 col-lg-2"
                  >
                    <span
                      class="domain-no-wrap"
                    >
                      Name
                      <div
                        class="overlay-trigger"
                      >
                        <span
                          class="label-help-target"
                        >
                          <span
                            class="label-help-icon fa fa-question-circle"
                          />
                        </span>
                      </div>
                       *
                    </span>
                  </div>
                  <div
                    class="col-xs-9 col-lg-8"
                  >
                    <input
                      class="form-control"
                      id="name"
                      placeholder="Enter a name for this list"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="row margin-top"
                >
                  <div
                    class="col-xs-3 col-lg-2"
                  >
                    <span
                      class="domain-no-wrap"
                    >
                      Description
                      
                    </span>
                  </div>
                  <div
                    class="col-xs-9 col-lg-8"
                  >
                    <textarea
                      class="form-control"
                      id="description"
                    />
                  </div>
                </div>
              </div>
              <div
                class="col-xs-12 col-md-3"
              >
                <div
                  class="domain-field-section-heading"
                >
                  Allow these Actions
                </div>
                <div
                  class="list__properties__allowable-actions"
                >
                  <div
                    class="list__properties__checkbox-row"
                  >
                    <div
                      class="form-group"
                    >
                      <label>
                        <input
                          checked=""
                          type="checkbox"
                        />
                        Delete
                      </label>
                    </div>
                  </div>
                  <div
                    class="list__properties__checkbox-row"
                  >
                    <div
                      class="form-group"
                    >
                      <label>
                        <input
                          checked=""
                          type="checkbox"
                        />
                        Upload
                      </label>
                    </div>
                  </div>
                  <div
                    class="list__properties__checkbox-row"
                  >
                    <div
                      class="form-group"
                    >
                      <label>
                        <input
                          checked=""
                          type="checkbox"
                        />
                        Export & Print
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="domain-field-float-right btn btn-default"
                type="button"
              >
                Advanced Settings
              </button>
            </form>
          </div>
        </div>
      </div>
      <div
        class="panel panel-default domain-form-panel"
      >
        <div
          class="domain-panel-header domain-heading-collapsible domain-panel-header-collapsed"
          id="domain-header"
        >
          <div
            class="overlay-trigger"
          >
            <span
              class="label-help-target"
            >
              <span
                class="domain-panel-status-icon domain-panel-status-icon-blue"
              >
                <span
                  class="fa fa-exclamation-circle"
                />
              </span>
            </span>
          </div>
          <span
            class="domain-panel-title"
          >
            Fields
          </span>
          <span
            class="pull-right"
          >
            <span
              class="fa fa-lg fa-chevron-right domain-form-expand-btn"
            />
          </span>
        </div>
        <div
          class="collapse panel-collapse"
        >
          <div
            class="panel-body"
          >
            <span
              class=""
            >
              <i
                aria-hidden="true"
                class="fa fa-spinner fa-pulse"
              />
               
              Loading...
            </span>
          </div>
        </div>
      </div>
      <div
        class="form-buttons"
      >
        <div
          class="form-buttons__left"
        >
          <button
            class="cancel-button btn btn-default"
            type="button"
          >
            Cancel
          </button>
        </div>
        <div
          class="form-buttons__right"
        >
          <button
            class="save-button btn btn-primary"
            type="button"
          >
            Save
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
